--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://192.168.1.10:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db_core
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=rice_home
+DB_USERNAME=rice_home
+DB_PASSWORD=rice_home
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
